trunk/OldArchive/e661249338ce668dd6bb87a322b70ac7-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:24:24: error: expected initializer before ‘<’ token
     friend void special<float>(const lol<N, V, G>&) {
                        ^
